--- a/CustomerUI/packages.config
+++ b/CustomerUI/packages.config
@@ -2,8 +2,8 @@
 <packages>
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="Extended.Wpf.Toolkit" version="4.0.1" targetFramework="net472" />
-  <package id="OxyPlot.Core" version="2.0.0" targetFramework="net472" />
-  <package id="OxyPlot.Wpf" version="2.0.0" targetFramework="net472" />
+  <package id="MaterialDesignColors" version="1.2.7" targetFramework="net472" />
+  <package id="MaterialDesignThemes" version="3.2.0" targetFramework="net472" />
   <package id="PDFsharp" version="1.50.5147" targetFramework="net472" />
   <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net472" />
   <package id="WPFCustomMessageBox" version="1.0.7" targetFramework="net472" />
