units tests (transaction dialog)

--- a/BankManagementUnitsTests/BankManagementUnitsTests.csproj
+++ b/BankManagementUnitsTests/BankManagementUnitsTests.csproj
@@ -52,7 +52,7 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
+    <Compile Include="TransactionDialogTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
