--- a/BankManagementUnitsTests/BankManagementUnitsTests.csproj
+++ b/BankManagementUnitsTests/BankManagementUnitsTests.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="TransactionDialogTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransactionTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
